# trajectory

./: .env.example  .gitignore  API_Documentation.md  TiptapEditor.tsx.bak  docker-compose.yml  部署指南.md
backend/: .dockerignore  Dockerfile  convert_to_webp.py  crud.py  database.py  jixiang.db  main.py  models.py  pyproject.toml  replace_extensions.py  run.py  schemas.py
backend/data/: jixiang.db
backend/scratch/: migrate_bookmark.py
frontend/: .dockerignore  Dockerfile  Dockerfile.backend  README.md  fix_count.py  index.html  metadata.json  migrate_modal.py  nginx.conf  package-lock.json  package.json  replace_script.py  server.js  server.ts  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ArchiveDetailView.tsx  ArchiveFormModal.tsx  ArchiveView.tsx  AuthPage.tsx  BentoGrid.tsx  BottomNav.tsx  CategoryCascader.tsx  ConfirmModal.tsx  Footer.tsx  HeroSection.tsx  JumpGridSection.tsx  LeaderboardView.tsx  Methodology.tsx  MindMapSection.tsx  PlaySection.tsx  ProfileView.tsx  ProjectCard.tsx  StarMapGraph.tsx  Starfield.tsx  SubmitForm.tsx  TimelineFeed.tsx  TiptapEditor.tsx
frontend/src/data/: treeData.tsx
